Ingress-controller/ingress-rules-yandex-cloud/ingress-rules-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - grafana.solodium.test
    secretName: grafana-tls
  ingressClassName: nginx
  rules:
  - host: grafana.solodium.test   # ❗ Можешь изменить на что угодно
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
