Ingress-controller/ingress-rules-yandex-cloud/ingress-rules-logging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: logging
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  tls:
  - hosts:
    - opensearch.solodium.test
    secretName: opensearch-tls
  ingressClassName: nginx
  rules:
    - host: opensearch.solodium.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dashboards-opensearch-dashboards # Cюда вписываем названием СЕРВИСА получить его можно kubectl get svc -n monitoring
              port:
                number: 5601
